<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardviewReparacion"
         android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent">

            <ImageView
                android:id="@+id/imageViewVehiculo"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/document" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fltBtnEliminarReparacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:backgroundTint="@color/smsp_dismiss_color"
                android:clickable="false"
                android:contentDescription="@string/app_name"
                app:fabSize="mini"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_delete_24"
                app:tint="@color/smsp_white_color" />

            <RelativeLayout
                android:id="@+id/relativeDatosVehiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageViewVehiculo">

                <TextView
                    android:id="@+id/textViewTituloVIN"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/textInfoVehiculo"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewValueInfoVehiculo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="7dp"
                    android:layout_toEndOf="@+id/textViewTituloVIN"
                    android:text="@string/textValuexx" />


                <TextView
                    android:id="@+id/textViewMarca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewTituloVIN"
                    android:layout_marginTop="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/textFechaEntrada"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewValueFechaEntrada"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewTituloVIN"
                    android:layout_toEndOf="@+id/textViewMarca"
                    android:text="@string/textValuexx" />


                <TextView
                    android:id="@+id/textViewModelo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewMarca"
                    android:layout_marginTop="0dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/textTipoReparacion"
                    android:textColor="@color/primaryTextColor"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewValueNotaReparacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewValueFechaEntrada"
                    android:layout_toEndOf="@+id/textViewModelo"
                    android:text="@string/textValuexx" />


            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

